# rdo_replace_resolver

./: .gitignore  CMakeLists.txt  README.md  usd-hello-resolver.sublime-project  usd-hello-resolver.sublime-workspace
cmake/defaults/: handleBoostNamespace.cmake  pxrConfigHoudini.cmake
cmake/modules/: FindUSD.cmake
etc/: profile
etc/profile.d/: replaceResolver.sh
src/: CMakeLists.txt  __init__.py  boost_include_wrapper.h  debugCodes.cpp  debugCodes.h  helloResolver.cpp  helloResolver.h  helloResolverContext.cpp  helloResolverContext.h  module.cpp  moduleDeps.cpp  plugInfo.json  plugInfo.json.in  replaceResolver.cpp  replaceResolver.h  replaceResolverContext.cpp  replaceResolverContext.h  resolver.cpp  resolver.h  tokens.cpp  tokens.h  wrapHelloResolver.cpp  wrapHelloResolverContext.cpp  wrapReplaceResolver.cpp  wrapReplaceResolverContext.cpp  wrapTokens.cpp
src/testenv/: __init__.py  testAsArDefaultResolver.py  testHelloResolver.py  testImportReplaceResolver.py  testReplaceResolver.py
